fix bugs and align styling

--- a/public_html/tasks/style.css
+++ b/public_html/tasks/style.css
@@ -320,8 +320,8 @@ h1 {
 				-moz-border-radius: 3px 3px 0 0;
 				-webkit-border-radius: 3px 3px 0 0;
 				border-radius: 3px 3px 0 0;
-				border: solid 1px #A3A3A3;
-				border-bottom-color: #D3D3D3;
+				border: solid 1px #44414B;
+				border-bottom-color: #948FA0;
 				padding: 5px 10px;
 				width: 478px;
 				height: 30px;
@@ -329,13 +329,13 @@ h1 {
 			}
 
 			.creator-edit-bar {
-				background: #d3d3d3;
-				background: -webkit-gradient(linear, left top, left bottom, from(#e3e3e3), to(#d3d3d3));
-				background: -moz-linear-gradient(top, #e3e3e3, #d3d3d3);
+				background: #44414B;
+				background: -webkit-gradient(linear, left top, left bottom, from(#5D5A64), to(#44414B));
+				background: -moz-linear-gradient(top, #5D5A64, #44414B);
 				-moz-border-radius: 0 0 3px 3px;
 				-webkit-border-radius: 0 0 3px 3px;
 				border-radius: 0 0 3px 3px;
-				border: solid 1px #a3a3a3;
+				border: solid 1px #44414B;
 				border-top: none;
 				height: 30px;
 			}
@@ -408,19 +408,19 @@ h1 {
 						}
 					
 					#save-task {
-						background: #344321;
-						background: -webkit-gradient(linear, left top, left bottom, from(#45572E), to(#344321));
-						background: -moz-linear-gradient(top, #45572E, #344321);
-						border: solid 1px #344321;
+						background: #44414B;
+						background: -webkit-gradient(linear, left top, left bottom, from(#5D5A64), to(#44414B));
+						background: -moz-linear-gradient(top, #5D5A64, #44414B);
+						border: solid 1px #44414B;
 						color: #FFF;
 						margin-left: 10px;
 					}
 					
 						#save-task:hover,
 						#save-task:focus {
-							background: #41502D;
-							background: -webkit-gradient(linear, left top, left bottom, from(#52643A), to(#41502D));
-							background: -moz-linear-gradient(top, #52643A, #41502D);
+							background: #56525E;
+							background: -webkit-gradient(linear, left top, left bottom, from(#6D6975), to(#56525E));
+							background: -moz-linear-gradient(top, #6D6975, #56525E);
 						}
 					
 					#submit-task {
@@ -503,7 +503,6 @@ h1 {
 		.layout-2 .task {
 			width: 366px;
 		}
-
 
 /**** Tasks ****/
 
@@ -637,9 +636,9 @@ h1 {
 	}
 	
 	.edit-bar {
-		background: #d3d3d3;
-		background: -webkit-gradient(linear, left top, left bottom, from(#e3e3e3), to(#d3d3d3));
-		background: -moz-linear-gradient(top, #e3e3e3, #d3d3d3);
+		background: #948FA0;
+		background: -webkit-gradient(linear, left top, left bottom, from(#948FA0), to(#706D77));
+		background: -moz-linear-gradient(top, #948FA0, #706D77);
 		-moz-border-radius: 0 0 3px 3px;
 		-webkit-border-radius: 0 0 3px 3px;
 		border-radius: 0 0 3px 3px;
@@ -657,7 +656,7 @@ h1 {
 		.edit-bar > a,
 		.edit-bar > div > a,
 		.creator-edit-bar .flagger {
-			border-left: solid 1px #c3c3c3;
+			border-left: solid 1px #706D77;
 			display: block;
 			float: right;
 			outline: none;
@@ -739,7 +738,7 @@ h1 {
 		.link {
 			background-position: 100% -250px;
 			border-left: solid 1px #c3c3c3;
-			color: #38485C;
+			color: #D6D3DD;
 			display: block;
 			float: right;
 			font-size: .8em;
@@ -752,7 +751,8 @@ h1 {
 		.link:hover {
 			background: #FFF url('ui/icon-sprite.png') 100% -290px no-repeat;
 			background: url('ui/icon-sprite.png') 100% -290px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#e3e3e3));
-			background: url('ui/icon-sprite.png') 100% -290px no-repeat, -moz-linear-gradient(top, #FFF, #e3e3e3);		
+			background: url('ui/icon-sprite.png') 100% -290px no-repeat, -moz-linear-gradient(top, #FFF, #e3e3e3);	
+			color: #44414B;	
 		}
 		
 		#link-editor {
